src/styles/index.css
body a {
  color: #000;
  text-decoration-style: dotted;
}

body a:visited {
  color: #000;
}

body {
  font-family: 'Roboto', sans-serif;
}

.block-center {
  margin: 5px auto;
  min-width: 180px;
  padding: 0 15px;
  width: 30%;
}

.social-icon-group table {
  margin: 0 auto;
}

.social-icon-group table td {
  margin: 0 15px;
}

.social-icon-group i {
  color: #006064;
  margin: 0 15px;
  text-decoration: none;
}

.footer-text {
  text-align: center;
  font-size: .75rem;
  color: #808080;
}

#footer { /* Temporary positioning */
  position: absolute;
  width: 100%;
  bottom: 0;
}

